--- a/semantic1.html
+++ b/semantic1.html
@@ -11,5 +11,9 @@
     <div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt reiciendis corporis laudantium dicta dolores esse amet minima. Officia, sint! Qui eaque corrupti maiores nam commodi dicta architecto nemo molestiae et.</p>
     </div>
+    <div>
+        <h2>My love just for github</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio similique aliquid fugit odit ullam! Reprehenderit suscipit ut incidunt quos eos distinctio rem molestiae ex. Repudiandae, voluptate aut? Amet, labore?</p>
+    </div>
 </body>
 </html>
